--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.10"
 pydantic = "^1.9.0"
+mahjong = "^1.2.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
