--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,18 +2,18 @@
 name = "mahjongrepo"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["Taeho Gwon <taehogwon96@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.11"
 pydantic = "^1.9.0"
 mahjong = "^1.2.0"
 
 [tool.poetry.dev-dependencies]
-pre-commit = "^2.17.0"
-mypy = "^0.931"
+pre-commit = "^3.3.1"
+mypy = "^1.3.0"
 pytest = "^7.0.0"
-flake8 = "^4.0.1"
+flake8 = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
