--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Taeho Gwon <taehogwon96@gmail.com>"]
 python = "^3.11"
 pydantic = "^1.9.0"
 mahjong = "^1.2.0"
+numpy = "^1.24.3"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^3.3.1"
