--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ python = "^3.11"
 pydantic = "^1.9.0"
 numpy = "^1.24.3"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
+coverage = "^7.2.5"
 pre-commit = "^3.3.1"
 mypy = "^1.3.0"
 pytest = "^7.0.0"
