--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ pre-commit = "^3.3.1"
 mypy = "^1.3.0"
 pytest = "^7.0.0"
 flake8 = "^6.0.0"
+autoflake = "^2.1.1"
+isort = "^5.12.0"
+black = "^23.3.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
