--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,6 @@ pydantic = "^1.9.0"
 numpy = "^1.24.3"
 
 [tool.poetry.group.dev.dependencies]
-coverage = "^7.2.5"
 pre-commit = "^3.3.1"
 mypy = "^1.3.0"
 pytest = "^7.0.0"
@@ -18,6 +17,7 @@ flake8 = "^6.0.0"
 autoflake = "^2.1.1"
 isort = "^5.12.0"
 black = "^23.3.0"
+pytest-cov = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
