--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,12 @@
+[autoflake]
+in-place = True
+remove-unused-variables = True
+remove-all-unused-imports = True
+expand-star-imports = True
+
 [flake8]
 max-line-length = 120
-exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules
+exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,setup.cfg
 ignore=E203,W503
 max-complexity=10
 
@@ -23,3 +29,12 @@ filterwarnings =
     # asynctest occurs Deprecation warning below.
     ignore:"@coroutine" decorator is deprecated since Python 3.8, use "async def" instead
     ignore:The loop argument is deprecated since Python 3.8, and scheduled for removal in Python 3.10.
+
+[coverage:report]
+precision = 2
+skip_covered = true
+fail_under = 100
+exclude_also =
+    @abstractmethod
+    NotImplemented
+    raise ValueError
