--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ flake8 = "^6.0.0"
 autoflake = "^2.1.1"
 isort = "^5.12.0"
 black = "^23.3.0"
-pytest-cov = "^4.1.0"
+coverage = "^7.2.7"
+direnv = "^2020.12.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
