--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,12 +42,18 @@ repos:
     language: python
     types: [python]
     args: ['--config-file', './setup.cfg']
-  - id: pytest
-    name: pytest
-    entry: pytest
+  - id: coverage-run
+    name: coverage-run
+    entry: coverage run
     language: python
     types: [python]
-    pass_filenames: false
+    args: ['-m', 'pytest']
+  - id: coverage-report
+    name: coverage-report
+    entry: coverage report
+    language: python
+    types: [python]
+    args: ['--rcfile=./setup.cfg', '-m']
 
 
 default_language_version:
